fixes issue with spinner's z-index preventing nav links being clickable

--- a/css/hire-me.css
+++ b/css/hire-me.css
@@ -1,7 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
 @import url(http://fonts.googleapis.com/css?family=Lato:700);
 #spinner-container {
-  width: 100%; }
+  width: 100%;
+  z-index: -5; }
   #spinner-container:after {
     display: block;
     content: "";
@@ -347,7 +348,8 @@ a {
       margin-top: 66px; } }
 
 #spinner-container {
-  width: 100%; }
+  width: 100%;
+  z-index: -5; }
   #spinner-container:after {
     display: block;
     content: "";
